Implement target tag management using common RepositoryManagement (and abstract JPA impl)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>